cpp/space-age/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.006s
user	0m0.002s
sys	0m0.004s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
[ 25%] Building CXX object CMakeFiles/space-age.dir/space_age_test.cpp.o
[ 50%] Building CXX object CMakeFiles/space-age.dir/space_age.cpp.o
[ 75%] Building CXX object CMakeFiles/space-age.dir/test/tests-main.cpp.o
[100%] Linking CXX executable space-age
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
[100%] Built target space-age
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
===============================================================================
All tests passed (16 assertions in 9 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
[100%] Built target test_space-age
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/space-age.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/space-age.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)30179"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
space_age.cpp                                 22      22   100%   
space_age.h                                    9       9   100%   
space_age_test.cpp                            43      43   100%   
test/catch.hpp                                39      34    87%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        113     108    95%
------------------------------------------------------------------------------
lines: 95.6% (108 out of 113)
branches: 41.0% (155 out of 378)

real	0m9.651s
user	0m9.026s
sys	0m0.621s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.147s
user	0m0.103s
sys	0m0.046s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.154s
user	0m0.117s
sys	0m0.037s

===============================================================================

Running: clang-format-16 -style=file -i ./space_age.cpp ./space_age_test.cpp ./space_age.h

real	0m0.019s
user	0m0.010s
sys	0m0.009s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./space_age.cpp ./space_age_test.cpp ./space_age.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/space_age.h:4:10: fatal error: 'map' file not found
#include <map>
         ^~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/space_age.h.

real	0m0.594s
user	0m0.555s
sys	0m0.038s


real	0m0.596s
user	0m0.555s
sys	0m0.040s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
14912 warnings generated.
51952 warnings generated.
51952 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/space_age.h.
Suppressed 51957 warnings (51952 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m7.679s
user	0m7.604s
sys	0m0.075s
Running: clang-tidy-16 ./space_age.cpp ./space_age_test.cpp ./space_age.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/space-age/space_age.h:4:10: error: 'map' file not found [clang-diagnostic-error]
#include <map>
         ^~~~~


real	0m7.681s
user	0m7.605s
sys	0m0.077s

===============================================================================

